# atak

./: .todo  README.md  build.zig  build.zig.zon  docker-compose.yml  efus.sublime-project  efus.sublime-workspace  logo.xcf  main.py  pyproject.toml  pyvenv.cfg  test.efus
.github/workflows/: python-publish.yml
src/: atak.zig  efus.zig  main.zig  root.zig
src/atak/: app.py  pagebrowser.py  pager.py
src/efus/: __init__.py  attributemanager.zig  backend.zig  component.py  component.zig  componenttemplate.zig  constants.py  errors.zig  instruction.zig  namespace.py  namespace.zig  objects.zig  parser.py  parser.zig  subscribe.py  types.py
src/efus.egg-info/: PKG-INFO  SOURCES.txt
src/efus/parser/: parser.py  types.py
